--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,4 +22,7 @@ Imports: readr,
     scales,
     leaflet
 RoxygenNote: 6.0.1
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
