--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,7 @@ Version: 0.1.0
 Authors@R: person("Anh", "Dang", email = "maianhdang.ftu@gmail.com", role = c("aut", "cre"))
 Maintainer: Anh Dang <maianhdang.ftu@gmail.com>
 Description: The package is to process and visualize the NOAA dataset about earthquakes.
-    The visualisation includes: 
-    i) Plotting earthquakes in timeline; 
-    ii) Interactive leaflet with locations of earthquakes in maps 
-License: GPL-2 + file LICENSE
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 Depends: R(>= 3.2.2)
